Issue #3160556 by rkoller, johan.den.hollander, saschaeggi: The overflow isn't hidden on the Permissions page with iOS

--- a/styles/components/_body.scss
+++ b/styles/components/_body.scss
@@ -13,6 +13,7 @@ html {
 body {
   color: var(--colorGinText);
   background: var(--colorGinAppBackground);
+  overflow-x: hidden;
 }
 
 h1, h2, h3 {
